<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/naziv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/naziv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </EditText>

            <TableRow
            android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
            </TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/sifra"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

    <EditText
        android:id="@+id/sifra"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </EditText>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
    </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/sastav"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
    <EditText
        android:id="@+id/sastav"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </EditText>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
    </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/kategorija"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/kategorija"
            android:drawSelectorOnTop="true"
            android:textSize="20sp"
            android:entries="@array/Kategorije">
        </Spinner>


    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
    </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/opis"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
    <EditText
        android:id="@+id/opis"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </EditText>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
    </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/cijena"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
    <EditText
        android:id="@+id/cijena"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </EditText>
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
    </TableRow>

        <Button
            android:id="@+id/btn_potvrdi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/potvrdi"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="20sp">
        </Button>

    </LinearLayout>


</ScrollView>
